# ayon-launcher

./: .all-contributorsrc  .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.centos7  Dockerfile.debian  Dockerfile.rocky8  Dockerfile.rocky9  README.md  app_launcher.cpp  app_launcher.py  inno_setup.iss  latest  linux-requirements.in  mkdocs.yml  mkdocs_hooks.py  mkdocs_requirements.txt  poetry.toml  pyproject.toml  requirements.txt  setup.py  start.py  version.py  versions.json  windows-requirements.in
.github/ISSUE_TEMPLATE/: config.yml  enhancement_request.yml
.github/workflows/: build_launcher.yml  create_release.yml  deploy_mkdocs.yml  documentation.yml  miletone_release_trigger.yml  pr_linting.yml  prerelease.yml  release_build.yml  test_build.yml  update_bug_report.yml
1.2.0/: 404.html  index.html  license.html  objects.inv
1.2.0/autoapi/: app_launcher.html  mkdocs_hooks.html  setup.html  start.html  summary.html  version.html
1.2.0/autoapi/common/ayon_common/: _windows_register_scheme.html  index.html  ui_utils.html  utils.html
1.2.0/autoapi/shim/: macos_start.html  setup.html  shim_start.html
1.2.0/build_guides/: linux.html  macos.html  windows.html
1.2.0/search/: search_index.js  search_index.json
1.4.2/: 404.html  index.html  license.html
1.4.2/autoapi/: app_launcher.html  setup.html  start.html  summary.html  version.html
1.4.2/autoapi/common/ayon_common/: _windows_register_scheme.html  (+3 more)
1.4.2/autoapi/shim/: macos_start.html  setup.html  shim_start.html
1.4.2/build_guides/: linux.html  macos.html  windows.html
1.4.2/search/: search_index.js  search_index.json
1.4.3/: 404.html  index.html  license.html  objects.inv
1.4.3/autoapi/: app_launcher.html  setup.html  start.html  summary.html  version.html
1.4.3/autoapi/shim/: macos_start.html  setup.html  shim_start.html
1.4.3/build_guides/: linux.html  macos.html  windows.html
1.4.3/search/: search_index.js
1.5.0/: 404.html
1.5.0/autoapi/: summary.html  version.html
1.5.0/autoapi/shim/: macos_start.html  shim_start.html
1.5.0/build_guides/: linux.html  macos.html  windows.html
1.5.1/: index.html  license.html
1.5.1/autoapi/: app_launcher.html  setup.html  start.html
1.5.1/autoapi/shim/: setup.html
1.5.1/search/: search_index.json
1.5.2-a/: 404.html
1.5.2-a/autoapi/shim/: macos_start.html  setup.html
1.5.2-a/build_guides/: windows.html
1.5.2-a/search/: search_index.js
1.5.2-b/: index.html  license.html
1.5.2-b/autoapi/: setup.html  summary.html  version.html
1.5.2-b/autoapi/shim/: shim_start.html
1.5.2-b/build_guides/: linux.html  macos.html
1.5.2-b/search/: search_index.json
1.5.2/autoapi/: app_launcher.html  start.html
1.5.3/autoapi/: app_launcher.html
1.5.3/autoapi/shim/: setup.html
1.5.3/build_guides/: linux.html  macos.html
1.5.3/css/: custom.css
1.5.3/search/: search_index.js  search_index.json
1.5.4/: index.html
1.5.4/autoapi/: summary.html
1.5.4/build_guides/: linux.html  windows.html
1.5.4/search/: search_index.js  search_index.json
1.5.5/: 404.html  license.html
1.5.5/autoapi/: setup.html  version.html
1.5.5/build_guides/: macos.html
1.6.0/: 404.html  license.html  objects.inv
1.6.0/autoapi/: start.html
1.6.0/build_guides/: linux.html
1.6.0/search/: search_index.js
1.6.1/: index.html
1.6.1/search/: search_index.json
1.6.2/: objects.inv
1.6.2/autoapi/: start.html  summary.html  version.html
1.6.2/build_guides/: macos.html  windows.html
1.6.2/search/: search_index.js  search_index.json
1.6.3/autoapi/: app_launcher.html
1.6.3/search/: search_index.js  search_index.json
common/ayon_common/: __init__.py  _windows_register_scheme.py  utils.py
common/ayon_common/connection/: credentials.py
common/ayon_common/distribution/: README.md  __init__.py  control.py  data_structures.py  downloaders.py  exceptions.py  file_handler.py  utils.py
common/ayon_common/resources/: __init__.py  stylesheet.css
common/ayon_common/startup/: __init__.py
docs/: index.md
docs/build_guides/: linux.md  macos.md  windows.md
mac1.5.3/autoapi/: start.html
mac1.5.3/autoapi/shim/: macos_start.html  shim_start.html
mac1.5.3/build_guides/: macos.html
mac1.5.3/search/: search_index.js  search_index.json
shim/: .gitignore  Cargo.toml  ayon.desktop  build.rs  inno_setup.iss  macos_start.py  pyproject.toml  setup.py  shim_start.py
shim/shim/: Cargo.toml
shim/shim-macos/: Cargo.toml  build.rs
shim/shim-rust/: .gitignore  Cargo.toml
shim/shim-rust/shim/: Cargo.toml  build.rs
shim/shim-rust/shim-core/: Cargo.toml
shim/shim-rust/shim-core/src/: lib.rs
shim/shim-rust/shim-linux/: Cargo.toml
shim/shim-rust/shim-linux/src/: main.rs
shim/shim-rust/shim-macos/: Cargo.toml
shim/shim-rust/shim-macos/src/: ayon.rs  main.rs
shim/shim-rust/shim-windows/: Cargo.toml
shim/shim-rust/shim-windows/src/: main.rs
shim/shim-rust/shim/src/: main.rs
shim/shim-rust/src/: macos_main.rs  main.rs
shim/shim/src/: main.rs
test-build/: 404.html  index.html  license.html  objects.inv
test-build/autoapi/: app_launcher.html  mkdocs_hooks.html  setup.html  start.html  summary.html  version.html
test-build/autoapi/shim/: macos_start.html  setup.html  shim_start.html
test-build/build_guides/: linux.html  macos.html  windows.html
test-build/search/: search_index.js  search_index.json
tests/integration/: README.md
tests/lib/: README.md
tests/unit/igniter/: test_tools.py
tools/: _runtime_deps.py  _venv_deps.py  ayon_console.bat  build.ps1  build.sh  build_post_process.py  build_win_installer.ps1  ci_tools.py  docker_build.sh  fetch_thirdparty_libs.ps1  hatch_build.py  installer_post_process.py  make.sh  manage.ps1  manage_version.py  pack_project.ps1  package_builds.py  python_packages_info.py  run_settings.ps1  run_tray.ps1  run_tray.sh  runtime_dependencies.py  unpack_project.ps1  update_submodules.ps1  update_submodules.sh  upload_to_server.py  utils.py
tools/macos/: SIGNING_CONFIG.md  ayon.entitlements  ayon_helper.entitlements  codesign_orchestrator.py
(+224 files in other folders)
