[project]
name = "AYON"
requires-python = ">=3.9.6, <3.10"
version = "1.4.4-dev"
description = "Open VFX and Animation pipeline with support."
authors = [
    {name = "Ynput s.r.o.", email = "info@ynput.io"}
]
license = {file = "LICENSE"}

readme = "README.md"
keywords = ["Pipeline", "AYON", "Avalon", "VFX", "animation", "automation", "tracking", "asset management"]

dependencies = [
    "ayon-python-api == 1.2.6",
    "arrow ~= 0.17",
    "Unidecode ~= 1.3.0",
    "aiohttp ~= 3.7",
    # local settings
    "appdirs @ git+https://github.com/ActiveState/appdirs.git",
    "platformdirs",
    "coolname",
    "keyring ~= 22.0.1",
    # environment variables resolving
    "acre @ git+https://github.com/pypeclub/acre.git",
    # terminal formatting
    "blessed ~= 1.17", # Use only in helper scripts
    "enlighten ~= 1.9.0",
    # requirements
    "cryptography ~= 39.0.0",
    "dnspython ~= 2.1.0",
    "urllib3 ~= 1.26.16",
    "semver ~= 2.13.0",
    "QtPy ~= 2.3.0",
    "pywin32 == 310; sys_platform == 'win32'",
    "python3-xlib; sys_platform == 'linux'",
    "distro == 1.9.0; sys_platform == 'linux'",
    "pip ~= 24.0",
    "pre-commit>=3.8.0",
    "toml",  # remove for python 3.11
]

[project.optional-dependencies]
dev = [
    "flake8 ~= 6.0",
    "autopep8 ~= 2.0",
    "coverage",
    "cx_Freeze ~= 8.4",
    "GitPython ~= 3.1.17",
    "hatchling",
    "jedi ~= 0.13",
    "Jinja2 ~= 3.1",
    "markupsafe ~= 2.0.1",
    "pycodestyle",
    "pydocstyle",
    "linkify-it-py ~= 2.0.0",
    "myst-parser ~= 0.18.1",
    "pre-commit",
    "pylint ~= 2.5",
    "pytest ~= 6.1",
    "pytest-cov",
    "pytest-print",
    "wheel",
    "enlighten",  # cool terminal progress bars
]

[project.urls]
"Bug Tracker" = "https://github.com/ynput/ayon-launcher/issues"
"Discussions" = "https://github.com/ynput/ayon-launcher/discussions"
"homepage" = "https://ynput.io"
"documentation" = "https://ayon.ynput.io"
"repository" = "https://github.com/ynput/ayon-launcher"

[tool.uv]
python-preference = "only-managed"

[project.scripts]
ayon = "start:boot"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0"
autopep8 = "^2.0"
coverage = "*"
# cx_freeze is frozen to this version because of the Centos 7 support
# newer versions are using `patchelf` version which is not
# available on Centos 7
cx_freeze = "6.12.0"
# this is here because of the bug in cx_freeze, fixed in cx_freeze 7
# see https://github.com/ynput/ayon-launcher/issues/114
lief = "<0.14"
GitPython = "^3.1.17"
jedi = "^0.13"
Jinja2 = "^3"
markupsafe = "2.0.1"
pycodestyle = "*"
pydocstyle = "*"
linkify-it-py = "^2.0.0"
myst-parser = "^0.18.1"
pylint = "^2.4.4"
pytest = "^6.1"
pytest-cov = "*"
pytest-print = "*"
wheel = "*"
enlighten = "*"  # cool terminal progress bars
toml = "^0.10.2" # for parsing pyproject.toml
pre-commit = "*"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[ayon]
[ayon.qtbinding.windows]
package = "PySide6"
version = "6.7.1"

[ayon.qtbinding.darwin]
package = "PySide6"
version = "6.7.1"

[ayon.qtbinding.linux]
package = "PySide6"
version = "6.7.1"

[ayon.qtbinding.centos7]
package = "PySide2"
version = "5.15.2"

[ayon.qtbinding.pyside2]
package = "PySide2"
version = "5.15.2"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["build"]

[tool.pyright]
include = [
    "vendor"
]
exclude = [
    "**/node_modules",
    "**/__pycache__"
]
ignore = [".git"]

reportMissingImports = true
reportMissingTypeStubs = false
