[project]
name = "AYON"
requires-python = "==3.11.9"
version = "1.5.4-dev"
description = "Open VFX and Animation pipeline with support."
authors = [
    {name = "Ynput s.r.o.", email = "info@ynput.io"}
]
license = {file = "LICENSE"}

readme = "README.md"
keywords = ["Pipeline", "AYON", "Avalon", "VFX", "animation", "automation", "tracking", "asset management"]

dependencies = [
    "ayon-python-api == 1.2.14",
    "arrow >=0.4.4,<1",
    "Unidecode ~= 1.4.0",
    "aiohttp ~= 3.13",
    # local settings
    "platformdirs",
    "coolname",
    "keyring ~= 25.7.0",
    # terminal formatting
    "blessed ~= 1.33", # Use only in helper scripts
    "enlighten ~= 1.14.1",
    # requirements
    "cryptography ~= 46.0.5",
    "dnspython ~= 2.8.0",
    "urllib3 ~= 2.6.3",
    "semver ~= 3.0.4",
    "QtPy ~= 2.4.3",
    "pywin32 == 311; sys_platform == 'win32'",
    "python3-xlib; sys_platform == 'linux'",
    "distro == 1.9.0; sys_platform == 'linux'",
    "pre-commit>=4.5.1",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "cx_Freeze ~= 8.6",
    "GitPython ~= 3.1.46",
    "hatchling",
    "jedi ~= 0.19",
    "Jinja2 ~= 3.1",
    "markupsafe ~= 3.0.3",
    "pycodestyle",
    "pydocstyle",
    "linkify-it-py ~= 2.1.0",
    "myst-parser ~= 5.0.0",
    "pre-commit",
    "pylint ~= 4.0.5",
    "pytest ~= 9.0.2",
    "pytest-cov",
    "pytest-print",
    "wheel",
    "enlighten",  # cool terminal progress bars
]

[project.urls]
"Bug Tracker" = "https://github.com/ynput/ayon-launcher/issues"
"Discussions" = "https://github.com/ynput/ayon-launcher/discussions"
"homepage" = "https://ynput.io"
"documentation" = "https://ayon.ynput.io"
"repository" = "https://github.com/ynput/ayon-launcher"

[tool.uv]
python-preference = "only-managed"

[project.scripts]
ayon = "start:boot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[ayon]
[ayon.qtbinding.windows]
package = "PySide6"
version = "6.7.1"

[ayon.qtbinding.darwin]
package = "PySide6"
version = "6.7.1"

[ayon.qtbinding.linux]
package = "PySide6"
version = "6.7.1"

[ayon.qtbinding.pyside2]
package = "PySide2"
version = "5.15.2"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["build"]

[tool.pyright]
include = [
    "vendor"
]
exclude = [
    "**/node_modules",
    "**/__pycache__"
]
ignore = [".git"]

reportMissingImports = true
reportMissingTypeStubs = false
