[project]
name = "AYON-shim"
dynamic = ["version"]
description = "Open VFX and Animation pipeline with support."
authors = [
    {name = "Ynput s.r.o.", email = "info@ynput.io"}
]
license = { text = "MIT License" }
requires-python = "==3.11.9"

dependencies = [
    "platformdirs ~= 4.9.4",
    "semver ~= 3.0.4",
    "cx_freeze ~= 8.6",
    "hatch >= 1.16.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "./version.py"

[project.urls]
"Bug Tracker" = "https://github.com/ynput/ayon-launcher/issues"
"Discussions" = "https://github.com/ynput/ayon-launcher/discussions"
"documentation" = "https://ayon.ynput.io"
"repository" = "https://github.com/ynput/ayon-launcher"
"homepage" = "https://ynput.io"
