[project]
name = "AYON-shim"
dynamic = ["version"]
description = "AYON Launcher shim"
authors = [
    {name = "Ynput s.r.o.", email = "info@ynput.io"}
]
license = { text = "MIT License" }
requires-python = "==3.11.9"

dependencies = [
    "hatch >= 1.16.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "./version.py"

[project.urls]
"Bug Tracker" = "https://github.com/ynput/ayon-launcher/issues"
"Discussions" = "https://github.com/ynput/ayon-launcher/discussions"
"documentation" = "https://ayon.ynput.io"
"repository" = "https://github.com/ynput/ayon-launcher"
"homepage" = "https://ynput.io"
