[package]
name = "shim-macos"
version = "1.1.1"
edition = "2021"

[package.metadata.bundle]
name = "AYON"
identifier = "AYON"
icon = ["../common/ayon_common/resources/AYON.icns"]
osx_url_schemes = ["ayon-launcher"]
resources = ["version"]
osx_info_plist_exts = ["LSUIElement.plist"]

[dependencies]
objc2 = "0.5.2"
objc2-foundation = { version = "0.2.2", features = ["all"] }
objc2-app-kit = { version = "0.2.2", features = ["all"] }

[[bin]]
name = "ayon_macos"
path = "src/main.rs"
