[package]
name = "ayon-shim"
version = "1.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
directories = "5.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
block = "0.1"

[build-dependencies]
winres = "0.1"

[features]
gui = []
windows_console = []
macos_launcher = []

[[bin]]
name = "ayon"
path = "src/main.rs"
required-features = ["gui"]

[[bin]]
name = "ayon_console"
path = "src/main.rs"
required-features = ["windows_console"]

[[bin]]
name = "ayon_macos"
path = "src/macos_main.rs"
required-features = ["macos_launcher"]
