[package]
name = "ayon-shim"
version = "1.1.0"
edition = "2021"

[package.metadata.bundle]
name = "AYON"
identifier = "AYON"
icon = ["../../common/ayon_common/resources/AYON.icns"]
osx_url_schemes = ["ayon-launcher"]
resources = ["version"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
directories = "5.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
block = "0.1"

[build-dependencies]
winres = "0.1"

[features]
gui = []
ayon_console = []
ayon_macos = []

[[bin]]
name = "ayon"
path = "src/main.rs"

[[bin]]
name = "ayon_console"
path = "src/main.rs"
required-features = ["ayon_console"]

[[bin]]
name = "ayon_macos"
path = "src/main.rs"
required-features = ["ayon_macos"]
