[package]
name = "shim"
version = "1.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
directories = "5.0"

[build-dependencies]
winres = "0.1"

[features]
gui = []
ayon_console = []

[[bin]]
name = "ayon"
path = "src/main.rs"
required-features = ["gui"]

[[bin]]
name = "ayon_console"
path = "src/main.rs"
required-features = ["ayon_console"]
